# rustle-bird

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md
.github/workflows/: build.yml
src/: bird.rs  config.rs  lib.rs  main.rs  map.rs  pipe.rs  state.rs
src/components/: bird.rs  map.rs  mod.rs
